# fabric-task-flows

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECTS.md  README.md  REGRESSION_ANALYSIS.txt  _heal_loop.py  exec-deck.md  legend.md  pyproject.toml  task-flows.md
.github/: copilot-instructions.md  lsp.json
_shared/: agent-boundaries.md  banner.py  cicd-practices.md  deployment-patterns.md  diagram_parser.py  documentation-templates.md  fabric-cli-commands.md  fabric_deploy.py  general-task-flow-schema.json  item-type-registry.json  learnings.md  memory.txt  parallel-deployment.md  prerequisites.md  problem-statements.md  registry_loader.py  script-banner.md  script-template.ps1  script-template.sh  sign-off-guide.md  signal-categories.json  validation-patterns.md  workflow-guide.md
decisions/: _index.md  api-selection.md  ingestion-selection.md  parameterization-selection.md  processing-selection.md  skillset-selection.md  storage-selection.md  visualization-patterns.md  visualization-selection.md
diagrams/: _index.md  app-backend.md  basic-data-analytics.md  basic-machine-learning-models.md  conversational-analytics.md  data-analytics-sql-endpoint.md  event-analytics.md  event-medallion.md  general.md  lambda.md  medallion.md  semantic-governance.md  sensitive-data-insights.md  translytical.md
projects/: .gitignore
scripts/: analyze-inefficiencies.py  build_task_flow.py  check-drift.py  deploy-script-gen.py  diagram-gen.py  fabric-logo.py  fleet-runner.py  handoff-scaffolder.py  heal-loop.py  heal-orchestrator.py  new-project.py  registry_loader.py  (+7 more)
(+257 files in other folders)
